--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     </head>
 
   <body>
-    Hello there, awesome person! 
+    Hello there, awesome person!
+    <h1>I'm a header 1!</h1>
+
   </body>
 
 </html>
