--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     </head>
 
   <body>
-    Hello there, awesome person!
+<img src="https://avatars.githubusercontent.com/u/88417532?v=4">
+
     <h1>I'm a header 1!</h1>
 
   </body>
