--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ol>
         <li>youtube.com</li>
         <li>twiter.com</li>
-        <li>instagram.com list</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
     </ol>
 
 
