--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
     <head>
-        <title>My awesome web page</title>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
     </head>
+
 
   <body>
 <img src="https://avatars.githubusercontent.com/u/88417532?v=4">
